--- a/server_nodejs/package.json
+++ b/server_nodejs/package.json
@@ -18,6 +18,7 @@
         "@babel/preset-env": "^7.16.11",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.1",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.2",
