--- a/server_nodejs/package.json
+++ b/server_nodejs/package.json
@@ -18,6 +18,7 @@
         "@babel/preset-env": "^7.16.11",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.1",
+        "connect-multiparty": "^2.2.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "ejs": "^3.1.6",
@@ -25,7 +26,9 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.1",
         "multer": "^1.4.4",
+        "multiparty": "^4.2.3",
         "node-fetch": "^2.6.7",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "path": "^0.12.7"
     }
 }
