--- a/server_nodejs/package.json
+++ b/server_nodejs/package.json
@@ -26,6 +26,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.1",
         "multer": "^1.4.4",
+        "multer-gridfs-storage": "^5.0.2",
         "multiparty": "^4.2.3",
         "node-fetch": "^2.6.7",
         "nodemon": "^2.0.15",
