--- a/server_nodejs/package.json
+++ b/server_nodejs/package.json
@@ -30,6 +30,8 @@
         "multiparty": "^4.2.3",
         "node-fetch": "^2.6.7",
         "nodemon": "^2.0.15",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "swagger-jsdoc": "^6.1.0",
+        "swagger-ui-express": "^4.3.0"
     }
 }
