--- a/frontend_flutter/pubspec.yaml
+++ b/frontend_flutter/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   http: ^0.13.4
   http_parser: ^4.0.0
   image_picker: ^0.8.4+9
+  animations: ^2.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
