--- a/server_nodejs/package.json
+++ b/server_nodejs/package.json
@@ -31,6 +31,7 @@
         "node-fetch": "^2.6.7",
         "nodemon": "^2.0.15",
         "path": "^0.12.7",
+        "sharp": "^0.30.2",
         "swagger-jsdoc": "^6.1.0",
         "swagger-ui-express": "^4.3.0"
     }
