--- a/server_nodejs/.env.example
+++ b/server_nodejs/.env.example
@@ -1,3 +1,10 @@
+NODE_ENV=development
 PORT=
+# link database
 MONGODB_URI=
+# a random secret key
 SECRET_KEY=
+
+# bearer token and user_id for testing eviroment
+BEARER_TOKEN='';
+USER_ID='';
