--- a/server_nodejs/package.json
+++ b/server_nodejs/package.json
@@ -4,7 +4,7 @@
     "description": "server_restapi_nodejs_ecommerce",
     "main": "server.js",
     "scripts": {
-        "test": "npm start",
+        "test": "mocha  tests/*.test.js --require @babel/register ",
         "start": "nodemon --exec babel-node src/server.js"
     },
     "keywords": [
@@ -13,7 +13,7 @@
     "author": "minhthao.dev95",
     "license": "ISC",
     "dependencies": {
-        "@babel/core": "^7.17.0",
+        "@babel/core": "^7.17.8",
         "@babel/node": "^7.16.8",
         "@babel/preset-env": "^7.16.11",
         "bcrypt": "^5.0.1",
@@ -29,10 +29,22 @@
         "multer-gridfs-storage": "^5.0.2",
         "multiparty": "^4.2.3",
         "node-fetch": "^2.6.7",
+        "nodemailer": "^6.7.3",
         "nodemon": "^2.0.15",
         "path": "^0.12.7",
+        "randomstring": "^1.2.2",
         "sharp": "^0.30.2",
         "swagger-jsdoc": "^6.1.0",
         "swagger-ui-express": "^4.3.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.17.8",
+        "@babel/node": "^7.16.8",
+        "@babel/polyfill": "^7.12.1",
+        "@babel/register": "^7.17.7",
+        "babel-preset-env": "^1.7.0",
+        "chai": "^4.3.6",
+        "chai-http": "^4.3.0",
+        "mocha": "^9.2.2"
     }
 }
