--- a/e_commerce_flutter/pubspec.yaml
+++ b/e_commerce_flutter/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^0.8.4+9
   animations: ^2.0.2
   intl: ^0.17.0
+  flutter_local_notifications: ^9.4.0
 
 dev_dependencies:
   flutter_test:
